Fixed spacing, search form

--- a/css/twitter.css
+++ b/css/twitter.css
@@ -15,6 +15,13 @@ body {
 
 .t-search {
   width: 221px;
+  border-radius: 30px 0px 0px 30px;
+  border-right: none;
+}
+
+.t-search-btn {
+  border-radius: 0px 30px 30px 0px;
+  border-left: none;
 }
 
 .panel-body {
@@ -35,7 +42,7 @@ body {
     border-top: 1px solid #ddd;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
-    padding-bottom: 5px;
+    padding-bottom: 1px;
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -49,5 +56,5 @@ hr {
 
 .favicon {
   color: grey;
-  padding-right: 20px;
+  padding-right: 60px;
 }
